# Dataplattformar_maskininl-rning_artificiell-intelligens_DE24_Abdulrahman_fahmi

./: .env  .gitignore  api.py  chat.py  chat1_eda.ipynb  chat_eda.ipynb  cheap_houses.csv  cv.duckdb  data_processing.py  frontend.py  gemini.ipynb  gemini_pydantic.ipynb  gemini_pydantic_robust.ipynb  lancedb_basics.ipynb  main.py  person.json  pydantic.ipynb  pydanticAI_pydantic_model.ipynb  pydantic_basics.ipynb  pyproject.toml  requirements.txt
data/: library.json
exports/: image_description.md
src/: data_models.py  movies_api.py  setup_db.py  utils.py
src/data/: movies.duckdb
